# geant4-simulations

./: README.md
Gammasphere/: CMakeLists.txt  gps_13C_alpha_n_16Ostar.mac  gps_13C_alpha_n_16OstarV2.mac  gps_16N.mac  gps_beam.mac  gps_neutrons_and_gammas.mac  gps_point_source1.mac  gps_point_source10.mac  gps_point_source11.mac  gps_point_source12.mac  gps_point_source14.mac  gps_point_source2.mac  gps_point_source3.mac  gps_point_source4.mac  gps_point_source5.mac  gps_point_source6.mac  gps_point_source7.mac  gps_point_source8.mac  gps_point_source9.mac  gps_radioactive.mac  run-all-energies.sh  runMacroBatch.mac  runMacroBatch1.mac  runMacroBatch10.mac  runMacroBatch11.mac  runMacroBatch12.mac  runMacroBatch13.mac  runMacroBatch14.mac  runMacroBatch15.mac  runMacroBatch2.mac  runMacroBatch3.mac  runMacroBatch4.mac  runMacroBatch5.mac  runMacroBatch6.mac  runMacroBatch7.mac  runMacroBatch8.mac  runMacroBatch9.mac  runMacroVis.mac  vis.mac
Gammasphere/Gammasphere/: README.txt  gps_neutron.mac  gps_point_source.mac  runMacroBatch.mac  vis.mac
Gammasphere/Gammasphere/src/: detectorConstruction.cc  main.cc  steppingAction.cc
Gammasphere/include/: eventAction.hh  steppingAction.hh
Gammasphere/src/: detectorConstruction.cc  eventAction.cc  main.cc  physics.cc  primaryGeneratorAction.cc  runAction.cc
GeGamma/GeGamma/: CMakeLists.txt  README.txt  gps_beam.mac  gps_neutron.mac  gps_neutrons_and_gammas.mac  gps_point_source.mac  gps_radioactive.mac  runMacroBatch.mac  runMacroVis.mac  vis.mac
GeGamma/GeGamma/include/: actionInitialisation.hh  eventAction.hh  steppingAction.hh
GeGamma/GeGamma/src/: GeGammaMain.cc  detectorConstruction.cc  eventAction.cc  physics.cc  runAction.cc  steppingAction.cc
GretinaLite/GretinaLite/: CMakeLists.txt  README.txt  runMacroBatch.mac  vis.mac
GretinaLite/GretinaLite/include/: detectorConstruction.hh
GretinaLite/GretinaLite/src/: actionInitialisation.cc  detectorConstruction.cc  eventAction.cc  runAction.cc  steppingAction.cc
MicronS3/MicronS3/: CMakeLists.txt  README.txt  gps_beam_200Hg.mac  runMacroBatch.mac  runMacroVis.mac  vis.mac
MicronS3/MicronS3/include/: detectorConstruction.hh  eventAction.hh  runAction.hh  steppingAction.hh
MicronS3/MicronS3/src/: detectorConstruction.cc  eventAction.cc  physics.cc  primaryGeneratorAction.cc  runAction.cc  steppingAction.cc
RecoilShadow/RecoilShadow/: CMakeLists.txt  README.txt  gps_radioactive.mac  runMacroBatch.mac  runMacroVis.mac  vis.mac
RecoilShadow/RecoilShadow/include/: actionInitialisation.hh  detectorConstruction.hh  eventAction.hh  physics.hh  primaryGeneratorAction.hh
RecoilShadow/RecoilShadow/src/: actionInitialisation.cc  detectorConstruction.cc  eventAction.cc  main.cc  physics.cc  runAction.cc  steppingAction.cc
